--- a/css/main.css
+++ b/css/main.css
@@ -12,121 +12,139 @@
 body{
     width: 100vw;
     height: 100vh;
-    background-color:  	#ffc8ee;
+    background-color: #ffc8ee;
     display: grid;
     place-items: center;
     font-family: 'IBM Plex Mono', monospace;
 }
 
-.grid{
-    display: grid;
-    width: 100%;
-    grid-template-columns: repeat(5,1fr) ;
-    /* grid-template-rows: repeat(3,1fr); */
-    grid-template-areas:"a a a a a" "d c e b g";
+.main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.container{
-    max-width: 25rem;
 
+
+.container{
+    max-width: 95vw;
 }
 
 .greeting{
     position: relative;
-    display: grid;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     grid-area: a;
-    place-items: center;
-    place-content: center;
+    
     /* background-color: var(--primary); */
     background-image: url("../1fdb008d3fdb801efe6cbdcce76a0609.gif");
-    background-size:120%;
+    background-size:140%;
     background-position: center;
-    min-height: 200px;
+    min-height: 140px;
+    max-height: 170px;
+    width: 100%;
     color: white;
-    margin: 1.5rem 1rem;
+    /* margin: 1.5rem 1rem; */
    
     border-radius: .7rem;
     font-size: 1rem;
     text-transform: capitalize;
         /* border: var(--secondary) 1px solid; */
     /* outline: var(--primary) 4px solid; */
-    /* box-shadow: 0 0 .2rem rgb(255, 255, 255); */
-    /* box-shadow: 0 0 2rem rgba(255, 255, 255, 0.074); */
-    box-shadow: 0 0 2rem rgba(255, 255, 255, 0.268)  ;
+    box-shadow: 0 0 .2rem rgb(255, 255, 255);
+    box-shadow: 0 0 2rem rgba(255, 255, 255, 0.074);
     overflow: hidden;
 }
 
-/* .greeting img{
-   
-
-   
-} */
-
 .greeting .current-time{
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-weight: 300;
-    position: absolute;
+    /* position: absolute; */
     /* box-shadow: 0 0 1rem black; */
 }
 
+
+.grid{
+    /* display: flex;
+    flex-wrap: wrap; */
+    /* width: 100%; */
+    margin-top: 2rem;
+    display: grid;
+    grid-template-columns: repeat(5,1fr) ;
+    grid-template-rows: repeat(2,1fr);
+    /* grid-template-areas:"d c e o b"; */
+    
+}
+
 .grid .shortcut{
+    display: grid;
+    place-items: center;
+    max-width: 50px;
+    max-height: 50px;
     background-color: var(--primary);
+    /* background-color: #000; */
     color: white;
-    padding:1rem;
-    margin: 0rem;
+    /* padding:1rem; */
+    /* margin: .2rem; */
     border-radius: .8rem;
     font-size: 1.5rem;
     text-decoration: none;
     text-align: center;
-    /* border: var(--secondary) px solid; */
-    /* outline: var(--primary) 4px solid; */
+
     transition: .3s ease-in-out;
-    /* box-shadow: 0 0 .3rem rgba(255, 255, 255, 0.13); */
+
 }
 
 
-.grid .shortcut:hover:not(.grid .shortcut:last-child){
+.grid .shortcut:hover:not(.grid .gif){
     scale: .9;
-    /* box-shadow: 0 0 2rem rgba(255, 255, 255, 0.15); */
     border-radius: .8rem;
 }
 
+
 .grid .shortcut:hover i{
     scale: 1;
-    color: #ffffff;
+    color: #ffffffc1;
     /* rotate: 15deg; */
-    
 }
 
-.grid .shortcut:first-child{
-    grid-area: b;
-}
-
-.grid .shortcut:nth-child(2){
-    grid-area: c;
-}
-
-.grid .shortcut:nth-child(3){
-    grid-area: d;
-}
-
-.grid .shortcut:last-child{
-    grid-area: e;
+.grid .gif{
+    /* grid-area: e; */
     padding: 0;
-    display: grid;
-    place-items: center;
-    background-image: url("../bb1f5198ff6e896caa146bec5cfafada.gif");
-    background-size: cover;
+    /* background-image: url("../d8e43bae5ab4a30cf06a35de4989d7c6.gif"); */
+    /* background-size: cover; */
+    overflow: hidden;
     box-shadow: 0 0 0px ;
 }
 
 
-.grid .netflix{
-    width: 75%;
+.main .search-section #searchbar{
+    width: 100%;
+    margin: .7rem 0 0rem;
+    padding: .2rem;
+    border: 0;
+    outline: 0;
+    font-size: .7rem;
+    border-radius: .3rem;
+    /* box-shadow: 0 0 1rem rgba(0, 0, 0, 0.413); */
+   
+    box-shadow: 0 0 1rem rgba(8, 8, 8, 0.07);
+    color: #ffc8ee;
+
 
 }
 
-.grid .mother{
-    /* background-color: red; */
-    display: grid;
-    place-items: center;}
+.main .search-section #searchbar:focus{
+    padding: .22rem;
+    font-size: .72rem;
+    box-shadow: 0 0 .5rem rgba(255, 255, 255, 0.505);
+
+}
+
+::selection {
+    color: #fff;
+    background: #ffc8ee;
+  }
