--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,7 @@ body{
     background-image: url("../1fdb008d3fdb801efe6cbdcce76a0609.gif");
     background-size:140%;
     background-position: center;
-    min-height: 140px;
+    min-height: 160px;
     max-height: 170px;
     width: 100%;
     color: white;
@@ -88,7 +88,7 @@ body{
     /* background-color: #000; */
     color: white;
     /* padding:1rem; */
-    /* margin: .2rem; */
+    margin: .4rem;
     border-radius: .8rem;
     font-size: 1.5rem;
     text-decoration: none;
@@ -96,6 +96,19 @@ body{
 
     transition: .3s ease-in-out;
 
+}
+
+.grid .custom {
+    
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.grid .custom img{
+    width: 35px;
+    height: 35px;
 }
 
 
@@ -107,7 +120,7 @@ body{
 
 .grid .shortcut:hover i{
     scale: 1;
-    color: #ffffffc1;
+    /* color: #ffffffc1; */
     /* rotate: 15deg; */
 }
 
